# papa

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: llm-contract.md
docs/assets/: sample-report.html
src/papa/: __init__.py  aggregate.py  cli.py  ingest.py  models.py  normalize.py  scoring.py  sentences.py
src/papa/analyzers/: __init__.py  adverbs.py  complex_phrase.py  passive.py  readability.py
src/papa/reporters/: __init__.py  cli.py  html.py  json_report.py
tests/: test_analyzers.py  test_cli.py  test_ingest.py  test_normalize.py  test_scoring.py
