[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papa-lint"
version = "0.1.0"
description = "Hemingway-grade readability for your docs pipeline — CLI, library, and CI gate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bharadwaj Pendyala" }]
keywords = ["readability", "hemingway", "linter", "prose", "writing", "ci", "textstat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = ["textstat>=0.7.3"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/bharadwaj-pendyala/papa"
Repository = "https://github.com/bharadwaj-pendyala/papa"
Issues = "https://github.com/bharadwaj-pendyala/papa/issues"

[project.scripts]
papa = "papa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/papa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
